[package]
name = "openrouter-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
bytes = "1.5.0"
clap = { version = "4.4.6", features = ["derive"] }
futures-util = "0.3.28"
http = "0.2.9"
hyper = "0.14.27"
hyper-rustls = "0.24.1"
reqwest = { version = "0.11.20", features = ["json", "stream"] }
rustls = "0.21.7"
rustls-pemfile = "1.0.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["full"] }
tokio-rustls = "0.24.1"
tower-http = { version = "0.4.4", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
axum-server = { version = "0.5", features = ["tls-rustls"] }
